force-app/main/default/objects/Schedule__c/Schedule__c.object-meta.xml
<CustomObject>
    <description>Named reusable working-hour template owned by a user</description>
    <label>Schedule</label>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>