force-app/main/default/objects/Schedule__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Workday</fullName>
            </value>
            <value>
                <fullName>UKG</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>SuccessFactors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>