force-app/main/default/objects/Schedule__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>Timezone applied when computing available slots</description>
    <label>Time Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>